# magic

./: Cargo.toml  README.md
crates/magic-cli/: Cargo.toml
crates/magic-cli/src/: main.rs
crates/magic-location/: Cargo.toml
crates/magic-location/src/: lib.rs
crates/magic-parser/: Cargo.toml
crates/magic-parser/src/: error.rs  lib.rs  parser.lalrpop  utils.rs
crates/magic-report/: Cargo.toml
crates/magic-report/src/: lib.rs
crates/magic-syntax/: Cargo.toml
crates/magic-syntax/src/: ast.rs
examples/: broken.magic  hello_world.magic
