[package]
name = "magic-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
magic-parser = { path = "../magic-parser" }
magic-report = { path = "../magic-report" }
clap = { version = "3.2", features = ["derive"] }
