[package]
name = "magic-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lalrpop-util = "0.20.0"
magic-syntax = { path = "../magic-syntax" }
magic-report = { path = "../magic-report" }
magic-location = { path = "../magic-location" }

[build-dependencies]
lalrpop = "0.20.0"
